remove borders and fix spacing

--- a/site/sass/globals/extends/_expanding-nav.scss
+++ b/site/sass/globals/extends/_expanding-nav.scss
@@ -24,7 +24,7 @@
   }
 
   &__nav {
-    margin-top: 0.5rem;
+    margin-top: 0.75rem;
     padding-left: 1rem;
     padding-right: 1rem;
   }
